# Penny

./: .gitignore  CLAUDE.md  LICENSE  README.md  checkpoints.dvc  data.dvc  pyproject.toml
configs/: config.json
configs/bitcoin/: config_lob.json  config_ofi.json
configs/crypto/binance/deeplob/: adausdt_lob.json  adausdt_ofi.json  avaxusdt_lob.json  avaxusdt_ofi.json  bnbusdt_lob.json  bnbusdt_ofi.json  btcusdt_ofi.json  dogeusdt_lob.json  dogeusdt_ofi.json  ethusdt_lob.json  ethusdt_ofi.json  solusdt_lob.json  solusdt_ofi.json  usdcusdt_lob.json  usdcusdt_ofi.json  xrpusdt_lob.json  xrpusdt_ofi.json
configs/crypto/binance/diffclf/: usdcusdt_lob.json  usdcusdt_ofi.json
configs/crypto/binance/dla/: btcusdt_lob_k10.json  btcusdt_lob_k100.json  btcusdt_lob_k20.json  btcusdt_lob_k50.json  btcusdt_ofi_k10.json  btcusdt_ofi_k100.json  btcusdt_ofi_k20.json  btcusdt_ofi_k50.json
configs/crypto/binance/jointdiff/: adausdt_lob.json  adausdt_ofi.json  avaxusdt_lob.json  avaxusdt_ofi.json  bnbusdt_lob.json  bnbusdt_ofi.json  (+12 more)
configs/crypto/deeplob/: btcusdt_lob.json  btcusdt_ofi.json
configs/crypto/jointdiff/: btcusdt_lob.json  btcusdt_ofi.json
configs/crypto/lobtransformer/: btcusdt_lob.json  btcusdt_ofi.json
configs/csdi/: lob.json  ofi.json
configs/stocks/feishu/: deeplob_ofi.json  jointdiff_ofi.json  lobtransformer_ofi.json  penny_ofi.json
configs/timesfm/: lob.json  ofi.json
docs/data/: README.md  binance.md  features.md  labels.md  nobitex.md  windows-and-normalization.md
docs/models/: README.md  axiallob.md  binctabl.md  ctabl.md  deeplob.md  dla.md  jointdit.md  jumpgatelob.md  stablelob.md  tlob.md
docs/xai/: README.md
notebooks/: alpha_horizon.ipynb  lob_analysis.ipynb  model_comparison.ipynb
scripts/: compare_xai.py  explain_gradient.py  resample_binance.py  train_penny.py  trim_gap.py
scripts/slurm/: deeplob_crypto.sh  jointdiff_crypto.sh  lobtransformer_crypto.sh
slurm/: deeplob_lob.slurm  deeplob_ofi.slurm  jointdiff_lob.slurm  jointdiff_ofi.slurm  lobtransformer_lob.slurm  lobtransformer_ofi.slurm  timesfm_lob.slurm  timesfm_ofi.slurm  train_lob.slurm  train_ofi.slurm
slurm/binance/_all/: jointdiffcfg_lob.slurm  jointdiffcfg_ofi.slurm  multi_deeplob_lob.slurm  multi_deeplob_ofi.slurm  multi_diffclf_lob.slurm  multi_diffclf_ofi.slurm  multi_jointdiff_lob.slurm  multi_jointdiff_ofi.slurm  multi_lobtransformer_lob.slurm  multi_lobtransformer_ofi.slurm  penny_lob.slurm  penny_ofi.slurm
slurm/binance/adausdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/avaxusdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/bnbusdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/btcusdt/: deeplob_lob.slurm  deeplob_ofi.slurm  jointdiff_lob.slurm  jointdiff_ofi.slurm  lobtransformer_lob.slurm  lobtransformer_ofi.slurm  scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/dogeusdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/ethusdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/solusdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/usdcusdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/binance/xrpusdt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/nobitex/_all/: jointdiffcfg_lob.slurm  jointdiffcfg_ofi.slurm  multi_deeplob_lob.slurm  multi_deeplob_ofi.slurm  multi_diffclf_lob.slurm  multi_diffclf_ofi.slurm  multi_jointdiff_lob.slurm  multi_jointdiff_ofi.slurm  multi_lobtransformer_lob.slurm  multi_lobtransformer_ofi.slurm  penny_lob.slurm  penny_ofi.slurm
slurm/nobitex/btcirt/: deeplob_lob.slurm  deeplob_ofi.slurm  jointdiff_lob.slurm  jointdiff_ofi.slurm  lobtransformer_lob.slurm  lobtransformer_ofi.slurm  scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/nobitex/usdtirt/: scorejacoblob_lob.slurm  scorejacoblob_ofi.slurm
slurm/stocks/feishu/: penny_ofi.slurm
slurm/xai/: compare_xai.slurm  explain_gradient.slurm
src/crypto/: dataset.py  features.py  labels.py  loader.py  multi_dataset.py  train_2phase_diffusion.py  train_deeplob.py  train_jointdiff.py  train_jointdiff_drift.py  train_jointdiffcfg.py  train_jointdiffdf_drift.py  train_jointdit.py  train_jumpgate_dsm.py  train_jumpgate_score.py  train_jumpgate_unet.py  train_jumpgatelob.py  train_lobtransformer.py  train_multi_deeplob.py  train_multi_diffclf.py  train_multi_jointdiff.py  train_multi_lobtransformer.py  train_multi_tlob.py  train_penny.py  train_scorejacoblob.py  train_stablelob.py  train_tlob.py
src/crypto/deeplob/: train.py
src/crypto/jointdiff/: train.py
src/crypto/lobtransformer/: train.py
src/crypto/utils/: features.py  loader.py
src/csdi/: model.py
src/levy/diffusion/: forward.py  generalized_score.py
src/models/: ddpm.py  deeplob.py  diffclf.py  dla.py  drift.py  iddpm.py  jointdiff.py  jointdiffcfg.py  jointdiffdf.py  jointdit.py  jumpgatedsm.py  jumpgatelob.py  jumpgatescore.py  jumpgateunet.py  lobtransformer.py  modules.py  penny.py  probe.py  scorejacoblob.py  stablelob.py  tlob.py
src/penny/: __init__.py  dataset.py  diffusion.py  evaluate.py  features.py  labels.py  model.py  train.py
src/stocks/feishu/: build.py  build_lobster.py  dataset.py  dataset_lobster.py  features.py  train_deeplob.py  train_jointdiff.py  train_jointdiff_lobster.py  train_jointdiffcfg.py  train_jointdiffcfg_lobster.py  train_lobtransformer.py
src/utils/: evaluate.py  training.py
src/xai/: aggregate.py  attribution.py  baselines.py  compare.py  faithfulness.py  gradient_methods.py  registry.py  sampling.py  visualize.py
(+246 files in other folders)
