[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penny"
version = "0.1.0"
description = "LOB direction forecasting on crypto (Binance, Nobitex) and equity (Feishu A-share) data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "captum>=0.7.0",
    "dvc[s3]>=3.56.0",
    "loguru>=0.7.3",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
# CUDA 11.8 — Pascal (P100 sm_60, GTX 10xx), Volta (V100), Turing (T4, RTX 20xx)
# Use this on older GPU clusters; CUDA 12.x drivers are backward-compatible
cu118 = [
    "torch==2.1.2",
    "torchvision==0.16.2",
]
# CUDA 12.6 — Turing (RTX 20xx), Ampere (A100, RTX 30xx), Ada (RTX 40xx)
cu126 = [
    "torch==2.11.0",
    "torchvision==0.26.0",
]
# CUDA 12.8 — RTX 30xx/40xx, A100, H100
cu128 = [
    "torch==2.11.0",
    "torchvision==0.26.0",
]
# CUDA 13.0 — Blackwell (RTX 50xx, B100), new default as of PyTorch 2.11
# Note: drops Maxwell/Pascal support
cu130 = [
    "torch==2.11.0",
    "torchvision==0.26.0",
]
# CPU-only for local dev or non-GPU nodes
cpu = [
    "torch==2.11.0",
    "torchvision==0.26.0",
]
# Apple Silicon — standard PyPI wheel includes MPS backend
mps = [
    "torch==2.11.0",
    "torchvision==0.26.0",
]

[project.scripts]
penny-crypto-deeplob         = "crypto.train_deeplob:main"
penny-crypto-lobtransformer  = "crypto.train_lobtransformer:main"
penny-crypto-jointdiff       = "crypto.train_jointdiff:main"
penny-crypto-diffclf         = "crypto.train_diffclf:main"
penny-crypto-penny           = "crypto.train_penny:main"
penny-stocks-deeplob         = "stocks.feishu.train_deeplob:main"
penny-stocks-lobtransformer  = "stocks.feishu.train_lobtransformer:main"
penny-stocks-jointdiff       = "stocks.feishu.train_jointdiff:main"
penny-stocks-diffclf         = "stocks.feishu.train_diffclf:main"


[tool.hatch.build.targets.wheel]
packages = ["src/crypto", "src/models", "src/stocks", "src/xai"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",   extra = "cpu",   marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",   extra = "cpu",   marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "cu118" },
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "cu130" },
        { extra = "cpu" },
        { extra = "mps" },
    ],
]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
